<resources>
    <string name="app_name">EngStudy</string>

    <string name="intro_title">All Study</string>

    <!-- login -->
    <string name="login_id">id</string>
    <string name="login_pw">pw</string>
    <string name="login">login</string>

    <!-- main -->
    <string name="eng_start_btn">English Study Start</string>
    <string name="db_start_btn">SQLite Study Start</string>
    <string name="eng_chk_start">Eng chk start</string>
    <string name="eng_word_start">Eng word chk start</string>
    <string name="eng_search">Eng Search</string>
    <string name="setting">Setting</string>

    <!-- SearchEngActivity -->
    <string name="search">search</string>
    <string name="init">init</string>
    <string name="reset">reset</string>
    <string name="key_item_cb">chap</string>
    <string name="chapter">chapter</string>

    <!-- EngCheckActivity -->
    <string name="eng_check_act">EngCheckAct</string>
    <string name="fill_data">fill data</string>
    <string name="add">add</string>
    <string name="edite">edit</string>
    <string name="check">check</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="eng">eng</string>
    <string name="kor">kor</string>
    <string name="mean">mean</string>
    <string name="chap">chap</string>
    <string name="type">type</string>
    <string name="help_type">type value\n
        1.1.1 가산 수량 a\n
        1.1.2 불가산 수량 a\n
        1.1.3 모든 수량 a\n
        1.1.4 all of the\n
        1.1.5 수량 a + 명\n
        1.1.6 other 류\n
        1.1.7 number 류\n
        2.1.1 조동사\n
        2.1.2 be 동사\n
        2.3.1 자동사\n
        2.3.1.3 자동사 구문\n
        2.3.2.1 타동사 3형식\n
        2.3.2.2 타동사 4형식\n
        2.3.2.4 타동사 5형식\n
        2.3.2.5 타동사 enable 과\n
        2.3.2.6 타동사 사역동사\n
        2.3.2.7 타동사 return 과\n
        2.3.2.8 타동사 inform 과\n
        2.3.2.9 말하다 동사\n
        3.1.1 현재\n
        3.1.2 현재 진행\n
        3.1.3 현재 완료\n
        3.2.1 과거\n
        3.2.2 과거 진행\n
        3.2.3 과거 완료\n
        3.3.1 미래\n
        3.3.2 미래 진행\n
        3.3.3 미래 완료\n
        3.4.1 시간 조건절\n
        3.4.3.1 요구 주장 제안\n
        3.4.3.2 필요 의무 형용사\n
        4.2 동명사를 목적어로\n
        4.6 to + 명/동명사\n
        5.2 to부정사를 목적어로\n
        5.5 to부정사 구문\n
        5.6 to부정사 + 동명사\n
        6.4.2 감정 동사\n
        7.2.1.1 등위접속사 순접\n
        7.2.1.2 등위접속사 인과\n
        7.2.1.3 등위접소사 역접\n
        7.3.1 상관접속사\n
        7.4.1 부사절 이끄는 접속사\n
        8.3 관계 대명사\n
        8.6 that vs what\n
        8.9 관계 부사
    </string>

    <string name="version">version</string>

    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="plus">+</string>
    <string name="del">del</string>
    <string name="apply">apply</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="s_count">success count</string>
    <string name="user">user</string>
    <string name="study">study</string>
    <string name="word_success">word success</string>
    <string name="user_info">user info</string>
    <string name="eng_word">eng word</string>
    <string name="word">word</string>
    <string name="my">my</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
