<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.engstudy.Fragment.EngWordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/add_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
        <Button
            android:id="@+id/chk_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"/>
        <Button
            android:id="@+id/search_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>


</FrameLayout>
