<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.Main2Activity">

    <LinearLayout
        android:id="@+id/menu_bottom_lil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/chap_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/word_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/my_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/set_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_fl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_bottom_lil"/>

</android.support.constraint.ConstraintLayout>
