<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.engstudy.EngCheckAddActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </ScrollView>

    <TextView
        android:id="@+id/key_add_eng_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_eng_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_add_eng_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/key_add_kor_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kor"
        app:layout_constraintTop_toBottomOf="@id/add_eng_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_kor_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_add_kor_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/key_add_type_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@id/add_kor_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_type_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_add_type_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/add_eng_sam_btn"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_type_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/result_add_eng_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_eng_sam_btn"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
