<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_eng_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng_start_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_eng_chk_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng_chk_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_eng_start"/>

    <Button
        android:id="@+id/btn_word_chk_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng_word_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_eng_chk_start"/>

    <Button
        android:id="@+id/btn_eng_search_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_word_chk_start"/>

    <Button
        android:id="@+id/btn_db_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DatabaseStudy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_eng_search_start"/>

</android.support.constraint.ConstraintLayout>
