<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.engstudy.EngEditWordActivity">

    <TextView
        android:id="@+id/tv_title_edit_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ToggleButton
        android:id="@+id/tbn_add_edit_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_param_eng_edit_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng"
        app:layout_constraintTop_toBottomOf="@id/tv_title_edit_eng"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_value_eng_edit_eng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_param_eng_edit_eng"
        app:layout_constraintLeft_toRightOf="@id/tv_param_eng_edit_eng"
        app:layout_constraintRight_toLeftOf="@id/tbn_add_edit_eng"/>

    <Button
        android:id="@+id/btn_save_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_param_mean_edit_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean"
        app:layout_constraintTop_toBottomOf="@id/et_value_eng_edit_eng"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/tv_param_chap_edit_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chap"
        app:layout_constraintTop_toBottomOf="@id/tv_param_mean_edit_eng"
        app:layout_constraintBottom_toTopOf="@id/btn_save_edit"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ListView
        android:id="@+id/lv_mean_edit_eng"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_param_mean_edit_eng"
        app:layout_constraintBottom_toTopOf="@id/tv_param_chap_edit_eng"/>
    <ListView
        android:id="@+id/lv_chap_edit_eng"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_param_chap_edit_eng"
        app:layout_constraintBottom_toTopOf="@id/btn_save_edit" />


</android.support.constraint.ConstraintLayout>
