<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.engstudy.EngCheckActivity">

    <Button
        android:id="@+id/add_eng_sample_btn"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </ScrollView>


    <!-- check 1 -->
    <TextView
        android:id="@+id/key_eng1_sample_tv"
        android:text="@string/eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_eng_sample_btn"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/result_chk1_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/key_eng1_sample_tv"
        app:layout_constraintTop_toTopOf="@id/key_eng1_sample_tv"/>

    <TextView
        android:id="@+id/eng1_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_eng1_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/key_kor1_sample_tv"
        android:text="@string/kor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eng1_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/kor1_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_kor1_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/key_type1_sample_tv"
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kor1_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/type1_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_type1_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <!--check2 -->
    <TextView
        android:id="@+id/key_eng2_sample_tv"
        android:text="@string/eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type1_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/result_chk2_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/key_eng2_sample_tv"
        app:layout_constraintTop_toTopOf="@id/key_eng2_sample_tv"/>

    <TextView
        android:id="@+id/eng2_sample_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_eng2_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/key_kor2_sample_tv"
        android:text="@string/kor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/eng2_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/kor2_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_kor2_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/key_type2_sample_tv"
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kor2_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/type2_sample_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/key_type2_sample_tv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/check_eng_btn"
        android:text="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type2_sample_et"
        app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>
