<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.UserInfoActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/csl_user_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_title_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/csl_user_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_title_study_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_param_cnt_success_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_success"
            app:layout_constraintTop_toBottomOf="@id/tv_title_study_info"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_val_cnt_success_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_param_cnt_success_info"
            app:layout_constraintLeft_toRightOf="@id/tv_param_cnt_success_info"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
