<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshstudy.allstudy.ui.engstudy.EngChkWordActivity">

    <TextView
        android:id="@+id/tv_param_eng_word_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_value_eng_word_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_param_eng_word_chk"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_param_mean_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean"
        app:layout_constraintTop_toBottomOf="@id/tv_value_eng_word_chk"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_show_mean_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_param_mean_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_quest_mean_type_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_show_mean_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_quest_mean_chk_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_quest_mean_type_word"
        app:layout_constraintLeft_toRightOf="@id/tv_quest_mean_type_word"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintTop_toBottomOf="@id/et_quest_mean_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_result_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_cnt_try_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_result_cnt_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_cnt_try_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_next_chk_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/tv_result_cnt_chk_word"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
